# scoop

./: .dockerignore  .env  .gitignore  Diagrame.drawio  Dockerfile  Makefile  README.md  coll_conf.py  constants.py  converter_number.py  database.py  docker-compose.yml  log_managment.py  main.py  models.py  populate.py  requirements.txt  script_install_postgres.sh  setupEnv.sh
.github/workflows/: python-pip-build.yml  python-poetry-build.yml  python-poetry-build_yml
api/: controllers.py  persistence.py  service.py  setup.py
api/utils/: db.py
conf/: coll_conf.py
controller/: database.py
dll/: views.sql  views_postgres.sql  views_sqlite.sql
docker/: .env-prod  PostgresExternals.yaml  docker-init.sh  externals.yml
docker/config/: etl.env  minio.env  pgadmin.env  postgres.env  redis_command.env  superset_container.env  superset_database.env
docker/postgresqlconfig/: pg_hba.conf
docker/pythonpath_dev/: .gitignore  (+1 more)
etl/: Dockerfile  __init__.py  etl_app.py  main.py  requirements.txt
meta/: models.py  populate.py
millennium/: Dockerfile  MANIFEST.in  Makefile  Millennium.py  README.md  pyproject.toml  requirements.txt  setup.py
millennium/src/: __init__.py  __main__.py
millennium/src/conf/: coll_conf.py
millennium/src/controller/: database.py
millennium/src/dll/: 01_vws_psql.sql  02_mat_psql.sql
millennium/src/dll/refresh/: mat.sql
millennium/src/meta/: populate.py
millennium/src/utils/: managments.py  other.py
neural/: network.py
other/: utils.py
scripts/: setupEnv.sh
super/: super.py
utils/: constants.py  converter_number.py
(+39 files in other folders)
